--- a/content/blog/2017-10-26-post-2.md
+++ b/content/blog/2017-10-26-post-2.md
@@ -1,11 +1,13 @@
 ---
-title: "Project 2"
+title: "API Integration Platform - Vital Digital"
 date: 2017-12-27T12:37:00.000Z
 draft: false
 tags:
   - Lorem
   - Ipsum
 ---
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+This past summer, I interned at Vital Digital - a start up company located in
+San Marcos, California.  Vital digital connects websites with CRM systems to
+support their digital marketing campaigns.
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
