--- a/content/blog/2017-10-26-post-2.md
+++ b/content/blog/2017-10-26-post-2.md
@@ -3,11 +3,11 @@ title: "API Integration Platform - Vital Digital"
 date: June - August 2019
 draft: false
 tags:
-  - Lorem
+  - WestCoast
   - Ipsum
 ---
 This past summer, I interned at Vital Digital - a start up company located in
-San Marcos, California. Vital Digital connects websites with CRM systems to
+San Marcos, California.  [Vital Digital](https://vitaldigital.us/) connects websites with CRM systems to
 support their digital marketing campaigns.
 
 I was in charge of designing a prototype of an integration platform.  My goal was to create a new software component to replace Zapier, the main integration platform that Vital Digital uses during their daily work tasks. Zapier is a great integration tool but it only allows the user to choose from a limited list of API’s. Vital Digital would benefit more from a tool that would allow any API to be used without having to pay for an existing piece of software.
