fix failed build

--- a/content/blog/2017-10-26-post-2.md
+++ b/content/blog/2017-10-26-post-2.md
@@ -3,7 +3,7 @@ title: "API Integration Platform - Vital Digital"
 date: June - August 2019
 draft: false
 tags:
-  - WestCoast
+  - Lorem
   - Ipsum
 ---
 This past summer, I interned at Vital Digital - a start up company located in
